[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 125

[tool.ruff.lint]
select = [
    "E",
    "W",
    "C90",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "N",
    "ANN",
    "ASYNC",
    "C4",
    "EM",
    "FA",
    "ICN",
    "G",
    "PIE",
    "T20",
    "ARG",
    "ERA",
    "LOG",
    "PL",
    "TRY",
]
ignore = [
    "E501",
    "ANN401",
    "ANN101",
    "ANN102",
    "ANN002",
    "ANN003",
    "PLR0913",
    "PLR2004",
    "PLR0917",
    "PLR6301",
]
preview = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true