[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "C90",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "N",
    "ANN",
    "ASYNC",
    "C4",
    "EM",
    "FA",
    "ICN",
    "G",
    "PIE",
    "T20",
    "ARG",
    "ERA",
    "LOG",
    "PL",
    "TRY",
]
ignore = [
    "E501",
    "ANN401",
    "ANN101",
    "ANN102",
    "ANN002",
    "ANN003",
    "PLR0913",
    "PLR2004",
    "PLR0917",
    "PLR6301",
]
preview = true

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[tool.pyright]
include = [
    "luna",
    "luna/adapter",
    "luna/block",
    "luna/interface",
]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.8"
typeCheckingMode = "basic"
